# command-line-conflict

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ISSUES.md  Makefile  README.md  SECURITY.md  TODO_ISSUES.md  build.py  fix_flake8.patch  index.html  main.py  mkdocs.yml  mypy.ini  objects.inv  patch.diff  patch_load.py  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  save_game.json  test_campaign_manager_path_traversal.py  test_campaign_manager_path_traversal2.py  test_campaign_manager_path_traversal3.py  test_chassis_count_perf.py  test_perf.py  test_perf_2.py  test_perf_3.py  test_perf_4.py  test_perf_5.py  tox.ini
.Jules/: palette.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  pull_request_template.md
.jules/: antigravity.md  bolt.md  claude.md  fable.md  palette.md  sentinel.md
API/: index.html
CHANGELOG/: index.html
CPP_OPTIMIZATION_STRATEGY/: index.html
Contributing/: index.html
ECS/: index.html
MapCreation/: index.html
Maps/: index.html
ProjectStructure/: index.html
Security/: index.html
agents/: index.html
command_line_conflict/: __init__.py  camera.py  campaign_manager.py  config.py  engine.py  factories.py  fog_of_war.py  game_state.py  input_manager.py  logger.py  music.py  save_game.py  steam_integration.py  tech_tree.py
docs/: AI_Logic.md  API.md  ASCII_Style_Guide.md  CHANGELOG.md  CHEATSHEET.md  CPP_OPTIMIZATION_STRATEGY.md  Contributing.md  Controls.md  Development.md  ECS.md  MapCreation.md  (+7 more)
(+361 files in other folders)
